--- a/src/markupper.scss
+++ b/src/markupper.scss
@@ -19,6 +19,7 @@
             border-radius: 8px;
             border-style: solid;
             border-color: transparent;
+            user-select: none;
 
             &:hover {
               cursor: pointer;
