Translation draft; Morphological analysis draft

--- a/src/markupper.scss
+++ b/src/markupper.scss
@@ -94,6 +94,10 @@
         .markupper-attribute-name {
           background-color: khaki;
         }
+
+        .markupper-attribute-value {
+          display: block;
+        }
       }
     }
   }
